# RFID-Locate-main

./: CSV_test.py  Donald.txt  README.md  SC-http-config.txt  Tag Calibration Test Documentation for R420 Reader.docx  csv.py  debug.txt  speedway-httppost-config.txt  ~$-d.docx  ~$g Calibration Test Documentation for R420 Reader.docx
Inventory/: CircleTest.csv  Fetch.py  POST.py  Reader_Settings.md  Reader_Settings.txt  TCPsocket.py  Test3-12.csv  Test3-13.csv  Test3-18.csv  Test3-5.csv  Test4-8.csv  Test4-9.csv  Tiny_Example.py  a2.csv  csv.py  data.csv  fetch.py  flask.py  inv_pyllrp.py  inv_sllurp(copy).py  inv_sllurp.py  inv_sllurp2.0.py  inventory.py  parse.py  quad1.csv  quad2.csv  quad3.csv  readme.md  rfid_data_2025-03-31T14-41-28.csv  rfid_data_2025-04-02T12-43-15.csv  rfid_reader.py  rfid_tags.csv  test.csv  writetocsv.py
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/: CMakeLists.txt  README.md  build.sh
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/docsample1/: CMakeLists.txt
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/docsample2/: CMakeLists.txt  setReaderConfig.xml
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/docsample3/: CMakeLists.txt
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/docsample4/: CMakeLists.txt  docsample4.cpp
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/docsample5/: CMakeLists.txt  docsample5.cpp
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/docsample6/: CMakeLists.txt
Inventory/LTK_CPP_Linux_12_0_0/libltkcpp-linux/examples/docsample7/: CMakeLists.txt
Locate/: Average_RSSI.py  (+21 more)
(+2233 files in other folders)
