cmake_minimum_required(VERSION 3.9)

project(docsamples)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-write-strings")

add_subdirectory(docsample1)
add_subdirectory(docsample2)
add_subdirectory(docsample3)
add_subdirectory(docsample4)
add_subdirectory(docsample5)
add_subdirectory(docsample6)
add_subdirectory(docsample7)
